samples/_failures_safe/1761711071_f333b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97d11f69.c: In function ‘main’:
./samples/SAFE/__tmp_97d11f69.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
